src/objects/Relationship_Intelligence__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Intelligence</relationshipLabel>
        <relationshipName>Relationship_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Process__c</fullName>
        <label>Buying Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Recognize</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Evaluate</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Track</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <inlineHelpText>What objectives is the client/prospect trying to achieve? What strategies are in place to achieve objectives and goals?</inlineHelpText>
        <label>Goals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <inlineHelpText>What does the client/prospect need so they can overcome the challenges/problems/obstacles and achieve the goals and objectives? Hint: This doesn’t have to be a named Green Street product.</inlineHelpText>
        <label>Needs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problems__c</fullName>
        <inlineHelpText>What is standing in the way of achieving goals and objectives? Are there obstacles or challenges?</inlineHelpText>
        <label>Problems</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Relationship Intelligence</relationshipLabel>
        <relationshipName>Relationship_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relationship Intelligence</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Relationship Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>